--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
    "hash": "ded60ec9150a09c156de5256e68274e5babac8f79a6b1da3626396b4cde86ab6"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
